Closed
Bug 1278202
Opened 9 years ago
Closed 9 years ago
Missing method |GrallocTextureHostBasic::GetCompositor|
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla50
Tracking | Status | |
---|---|---|
firefox50 | --- | fixed |
People
(Reporter: tzimmermann, Assigned: tzimmermann)
References
Details
Attachments
(1 file)
870 bytes,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
Looks like a regression from bug 1272600. Happens on b2g builds.
Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8760201 -
Flags: review?(nical.bugzilla)
Updated•9 years ago
|
Attachment #8760201 -
Flags: review?(nical.bugzilla) → review+
Pushed by tdz@users.sourceforge.net:
https://hg.mozilla.org/integration/mozilla-inbound/rev/3b7556645364
Add missing method |GrallocTextureHostBasic::GetCompositor|, r=nical
Assignee | ||
Comment 3•9 years ago
|
||
Comment 4•9 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•