Bug 1278202: Add missing method |GrallocTextureHostBasic::GetCompositor|, r=nical

MozReview-Commit-ID: 1WHSkS3qFLK